# solina

./: README.md
agent/: .env.example  .env.sample  .gitignore  Dockerfile  docker-compose.yml  models.py  notifications.txt  pipeline.py  pyproject.toml  requirements.txt  run_pipeline.py  signin.py
agent/db/: db_seed.py  db_setup.py  examples.txt  examples2.txt  models.py
agent/engines/: follow_user.py  json_formatter.py  long_term_mem.py  post_maker.py  post_retriever.py  post_sender.py  prompt.txt  prompts.py  short_term_mem.py  significance_scorer.py  wallet_send.py
